services/kube-system/mailserver.yaml
# ------------------- Deployment ------------------- #

apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  namespace: kube-system
  name: mailserver
  labels:
    app: mailserver
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mailserver
  template:
    metadata:
      namespace: kube-system
      labels:
        app: mailserver
    spec:
      nodeSelector:
        beta.kubernetes.io/arch: arm
      containers:
      - name: mailserver
        image: angelnu/docker-smtp-arm:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 25
---
kind: Service
apiVersion: v1
metadata:
  name: mailserver
  namespace: kube-system
spec:
  ports:
  - name: smtp
    port: 25
    targetPort: 25
  selector:
    app: mailserver
