services/kube-system/oauth2-proxy-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy-test
  name: oauth2-proxy-test
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy-test
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy-test
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - args:
        - "--cookie-domain=.nunez-gregoire.eu"
        - "--whitelist-domain=.nunez-gregoire.eu"
        - "--cookie-secure=true"
        - "--pass-access-token"
        - "--set-authorization-header"

        #set X-Auth-Request-User and X-Auth-Request-Email response headers (useful in Nginx auth_request mode)
        - "--set-xauthrequest"

        #- --cookie-expire=672h
        #- --cookie-refresh=1h
        #- --cookie-httponly=true
        #- --request-logging=false

        - "--provider=oidc"
        - "--provider-display-name='Home OpenID Connect'"
        - --email-domain=*
        #- --upstream=file:///dev/null
        - --cookie-secure=false
        - "--proxy-prefix="
        - --http-address=0.0.0.0:4180
        - "--redirect-url=https://ingress-auth.nunez-gregoire.eu/callback"
        - "--oidc-issuer-url=https://oidc.angelnu.com"
        image: quay.io/pusher/oauth2_proxy:latest
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy-test
  name: oauth2-proxy-test
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy-test

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy-test
  namespace: kube-system
spec:
  tls:
  - hosts:
    - ingress-auth.nunez-gregoire.eu
    secretName: prod-wildcard-nunez-gregoire-eu-tls
  rules:
  - host: ingress-auth.nunez-gregoire.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy-test
            port:
              number: 4180
